# Routing_on_the_hyperbolic_plane

./: .gitignore  CMakeLists.txt  LICENSE  Main.ui  README.md  experiment.cpp  main.cpp
include/: BeltramiKleinTraits.h
include/internal/: BeltramiKleinTraits.h  PoincareDiskTraits.h  RandomDomainGenerator.h  RoutingScenario.h  Triangulation_line_face_iterator.h
include/internal/Qt/: HyperbolicPainter.h
include/internal/Qt/GraphicItems/: HyperbolicSegmentGraphicsItem.h  HyperbolicTriangleGraphicsItem.h  RoutingScenarioGraphicsItem.h  TriangulationGraphicsItem.h
include/internal/Qt/Input/: NavigateInput.h  PointInput.h  PolylineInput.h  QObjectInput.h  TriangulationSelectTriangle.h
resources/: Main.qrc
